# NeuralNetworkApp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PREREQUISITES.md  README.md  ROADMAP.md  SECURITY.md  TO_DO.md  __init__.py  main.py  nuitka_compiler.py  pyproject.toml  requirements-visualization.txt  requirements-windows.txt  requirements.txt  setup.py
.github/: CODEOWNERS
Setup_iniziale/: crea_docs.py  example.py
checkpoints/: README.md
cli/: cli_menu.py
data/: README.md  test.pth
data/CIFAR10/: README.md
docs/: Directory_Structure.md  README.md  STRUCT.md  optimization_guide.md
docs/api/: data.md  models.md  network_builder.md  training.md
docs/examples/: index.md  mnist_classification.md
docs/guides/: architecture.md  code_style.md  custom_layers.md  data_pipeline.md  deployment.md  development.md  evaluation.md  faq.md  installation.md  optimization.md  quickstart.md  security.md  testing.md  training.md  transfer_learning.md  troubleshooting.md
examples/: README.md  cifar10_training.py  cnn_example.py  network_builder_demo.py  optimization_example.py  transfer_learning_example.py
src/: __init__.py  visualization.py
src/network_builder/: __init__.py  network_builder.py
src/neuralnetworkapp/: __init__.py  version.py
src/ui/: about.py  help.py  logger.py  menu.py  sponsor.py  translations.py  view_log.py
src/utils/: __init__.py  updates.py
tests/: test_cnn_models.py  test_data_augmentation.py  test_imports.py  test_network_architectures.py  test_network_builder.py  test_training_loop.py  test_transfer_learning.py  test_visualization.py
utils/: model_utils.py
(+16 files in other folders)
